[tool.poetry]
name = "py-api"
version = "0.1.0"
description = ""
authors = ["Lysandro Carioca <lysandroc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
flask-pydantic-spec = "^0.1.5"
pydantic = "^1.8.2"
tinydb = "^4.5.1"

[tool.poetry.dev-dependencies]
httpie = "^2.5.0"
Flask = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
